--- a/index.html
+++ b/index.html
@@ -203,11 +203,9 @@
                 'img/hero/background-4.JPG',
                 'img/hero/background-5.JPG',
                 'img/hero/background-6.JPG',
-                'img/hero/background-7.JPG',
-                'img/hero/background-8.JPG',
-                'img/hero/background-9.JPG'
+                'img/hero/background-7.JPG'
             ];
-            var HERO_DURATION = 6000;   // ms before starting next crossfade
+            var HERO_DURATION = 6000;
             var HERO_CROSSFADE_MS = 5000; // must match CSS transition duration
             var nextIndex = 1;
             var visibleLayer = 'A';
